--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -1,20 +1,41 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
-    <!-- Оператор -->
+    <!-- Operator -->
     <string id="32000">Select your telecom operator</string>
-    <string id="32001">HBO GO Hungary</string>
+    <string id="32001">HBO GO Hungary (webes regisztracio)</string>
     <string id="32002">UPC Direct</string>
+    <string id="32003">DIGI</string>
+    <string id="32004">Magyar Telekom Nyrt.</string>
+    <string id="32005">Telenor MyTV</string>
+    <string id="32006">UPC Magyarorszag</string>
+    <string id="32007">INVITEL</string>
+    <string id="32008">Celldömölki Kábeltelevízió Kft.</string>
+    <string id="32009">Eurocable – Hello Digital</string>
+    <string id="32010">hFC-Network Kft.</string>
+    <string id="32011">HIR-SAT 2000 Kft.</string>
+    <string id="32012">Jurop Telekom</string>
+    <string id="32013">Kabelszat 2002</string>
+    <string id="32014">Klapka Lakásszövetkezet</string>
+    <string id="32015">Lát-Sat Kft.</string>
+    <string id="32016">MinDig TV Extra</string>
+    <string id="32017">PARISAT</string>
+    <string id="32018">PR-TELECOM</string>
+    <string id="32019">TARR Kft</string>
+    <string id="32020">Vác Városi Kábeltelevízió Kft.</string>
+    <string id="32021">Vidanet Zrt.</string>
+    <string id="32022">HBO Development Hungary</string>
+    <string id="32023">HBO GO Vip/Club Hungary</string>
 
-    <!-- Акаунт -->
-    <string id="32020">Account</string>
-    <string id="32021">Operator</string>
-    <string id="32022">Username</string>
-    <string id="32023">Password</string>
-    <!-- Субтитри -->
-    <string id="32030">Subtitles</string>
-    <string id="32031">Activate subtitle loading by this addon</string>
-    <string id="32032">Language</string>
-    <string id="32033">Select subtitle language</string>
-    <string id="32034">Hungarian</string>
-    <string id="32035">English</string>
+    <!-- Account -->
+    <string id="32040">Account</string>
+    <string id="32041">Operator</string>
+    <string id="32042">Username</string>
+    <string id="32043">Password</string>
+    <!-- Settings -->
+    <string id="32050">Subtitles</string>
+    <string id="32051">Activate subtitle loading by this addon</string>
+    <string id="32052">Language</string>
+    <string id="32053">Select subtitle language</string>
+    <string id="32054">Hungarian</string>
+    <string id="32055">English</string>
 </strings>
