--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -9,19 +9,19 @@
     <string id="32005">Telenor MyTV</string>
     <string id="32006">UPC Magyarorszag</string>
     <string id="32007">INVITEL</string>
-    <string id="32008">Celldömölki Kábeltelevízió Kft.</string>
-    <string id="32009">Eurocable – Hello Digital</string>
+    <string id="32008">Celldomolki Kabeltelevízió Kft.</string>
+    <string id="32009">Eurocable - Hello Digital</string>
     <string id="32010">hFC-Network Kft.</string>
     <string id="32011">HIR-SAT 2000 Kft.</string>
     <string id="32012">Jurop Telekom</string>
     <string id="32013">Kabelszat 2002</string>
-    <string id="32014">Klapka Lakásszövetkezet</string>
-    <string id="32015">Lát-Sat Kft.</string>
+    <string id="32014">Klapka Lakasszövetkezet</string>
+    <string id="32015">Lat-Sat Kft.</string>
     <string id="32016">MinDig TV Extra</string>
     <string id="32017">PARISAT</string>
     <string id="32018">PR-TELECOM</string>
     <string id="32019">TARR Kft</string>
-    <string id="32020">Vác Városi Kábeltelevízió Kft.</string>
+    <string id="32020">Vac Varosi Kabeltelevizio Kft.</string>
     <string id="32021">Vidanet Zrt.</string>
     <string id="32022">HBO Development Hungary</string>
     <string id="32023">HBO GO Vip/Club Hungary</string>
