--- a/resources/language/Hungarian/strings.xml
+++ b/resources/language/Hungarian/strings.xml
@@ -10,7 +10,7 @@
     <string id="32006">UPC Magyarorszag</string>
     <string id="32007">INVITEL</string>
     <string id="32008">Celldömölki Kábeltelevízió Kft.</string>
-    <string id="32009">Eurocable – Hello Digital</string>
+    <string id="32009">Eurocable - Hello Digital</string>
     <string id="32010">hFC-Network Kft.</string>
     <string id="32011">HIR-SAT 2000 Kft.</string>
     <string id="32012">Jurop Telekom</string>
