--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -2,29 +2,7 @@
 <strings>
     <!-- Operator -->
     <string id="32000">Select your telecom operator</string>
-    <string id="32001">HBO GO Hungary (webes regisztracio)</string>
-    <string id="32002">UPC Direct</string>
-    <string id="32003">DIGI</string>
-    <string id="32004">Magyar Telekom Nyrt.</string>
-    <string id="32005">Telenor MyTV</string>
-    <string id="32006">UPC Magyarorszag</string>
-    <string id="32007">INVITEL</string>
-    <string id="32008">Celldomolki Kabeltelevízió Kft.</string>
-    <string id="32009">Eurocable - Hello Digital</string>
-    <string id="32010">hFC-Network Kft.</string>
-    <string id="32011">HIR-SAT 2000 Kft.</string>
-    <string id="32012">Jurop Telekom</string>
-    <string id="32013">Kabelszat 2002</string>
-    <string id="32014">Klapka Lakasszövetkezet</string>
-    <string id="32015">Lat-Sat Kft.</string>
-    <string id="32016">MinDig TV Extra</string>
-    <string id="32017">PARISAT</string>
-    <string id="32018">PR-TELECOM</string>
-    <string id="32019">TARR Kft</string>
-    <string id="32020">Vac Varosi Kabeltelevizio Kft.</string>
-    <string id="32021">Vidanet Zrt.</string>
-    <string id="32022">HBO Development Hungary</string>
-    <string id="32023">HBO GO Vip/Club Hungary</string>
+    <string id="32001">HBO GO Hrvatska (Web)</string>
 
     <!-- Account -->
     <string id="32040">Account</string>
@@ -36,6 +14,6 @@
     <string id="32051">Activate subtitle loading by this addon</string>
     <string id="32052">Language</string>
     <string id="32053">Select subtitle language</string>
-    <string id="32054">Hungarian</string>
+    <string id="32054">Hrvatski</string>
     <string id="32055">English</string>
 </strings>
