--- a/resources/language/Croatian/strings.xml
+++ b/resources/language/Croatian/strings.xml
@@ -11,12 +11,14 @@
     <!-- Strings -->
     <string id="33700">Traži filmove, serije...</string>
     <string id="33701">Nema rezultata</string>
-    <string id="33702">Error</string>
+    <string id="33702">Greška</string>
     <string id="33703">Epizoda se može pogledati do:</string>
     <string id="33704">Film se može pogledati do:</string>
     <string id="33705">EPIZODA</string>
     <string id="33706">SEZONA</string>
     <string id="33707">Moj izbor</string>
-    <string id="33708">Please enter your login details in the settings!</string>
-    <string id="33709">Login error, check your operator/login details!</string>
+    <string id="33708">Unesite podatke za prijavu u postavke!</string>
+    <string id="33709">Pogreška pri prijavi, provjerite podatke za prijavu!</string>
+    <string id="33710">Operater nije definirat! Provjerite vaše postavke!</string>
+    <string id="33711">Traži...</string>
 </strings>
