--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -92,3 +92,18 @@ msgctxt "#33711"
 msgid "Search..."
 msgstr ""
 
+msgctxt "#33650"
+msgid "Language"
+msgstr ""
+
+msgctxt "#33651"
+msgid "Always use default operator language"
+msgstr ""
+
+msgctxt "#33655"
+msgid "Subtitles"
+msgstr ""
+
+msgctxt "#33656"
+msgid "Automatically turn on default subtitles"
+msgstr ""
