--- a/resources/language/resource.language.hr_hr/strings.po
+++ b/resources/language/resource.language.hr_hr/strings.po
@@ -92,3 +92,18 @@ msgctxt "#33711"
 msgid "Search..."
 msgstr "Traži..."
 
+msgctxt "#33650"
+msgid "Language"
+msgstr "Jezik"
+
+msgctxt "#33651"
+msgid "Always use default operator language"
+msgstr "Uvijek koristi zadani jezik operatera"
+
+msgctxt "#33655"
+msgid "Subtitles"
+msgstr "Titlovi"
+
+msgctxt "#33656"
+msgid "Automatically turn on default subtitles"
+msgstr "Uključi zadane titlove automatski"
