--- a/resources/language/resource.language.hu_hu/strings.po
+++ b/resources/language/resource.language.hu_hu/strings.po
@@ -107,3 +107,15 @@ msgstr "Feliratok"
 msgctxt "#33656"
 msgid "Automatically turn on default subtitles"
 msgstr "Az alapértelmezett feliratok automatikus bekapcsolása"
+
+msgctxt "#33652"
+msgid "Always use original titles"
+msgstr ""
+
+msgctxt "#33670"
+msgid "Expert"
+msgstr ""
+
+msgctxt "#33671"
+msgid "Force scraper friendly titles"
+msgstr ""
