--- a/resources/language/resource.language.hu_hu/strings.po
+++ b/resources/language/resource.language.hu_hu/strings.po
@@ -89,7 +89,7 @@ msgid "NO HBOGO OPERATOR SELECTED. Please select your operator to continue."
 msgstr ""
 
 msgctxt "#32104"
-msgid "Country not selected. Please select your country in the settings."
+msgid "Operator not selected. Please select your  in the settings."
 msgstr ""
 
 msgctxt "#33440"
@@ -97,8 +97,8 @@ msgid "Settings"
 msgstr "Beállítások"
 
 msgctxt "#33441"
-msgid "Chose country"
-msgstr "Válassz országot"
+msgid "Chose country/operator"
+msgstr ""
 
 msgctxt "#33442"
 msgid "Username"
