--- a/resources/language/resource.language.hr_hr/strings.po
+++ b/resources/language/resource.language.hr_hr/strings.po
@@ -182,34 +182,6 @@ msgctxt "#33718"
 msgid "Trending Now"
 msgstr "Sada u trendu"
 
-msgctxt "#33719"
-msgid "Add to My List"
-msgstr ""
-
-msgctxt "#33720"
-msgid "Remove from My List"
-msgstr ""
-
-msgctxt "#33721"
-msgid "Vote 5"
-msgstr ""
-
-msgctxt "#33722"
-msgid "Vote 4"
-msgstr ""
-
-msgctxt "#33723"
-msgid "Vote 3"
-msgstr ""
-
-msgctxt "#33724"
-msgid "Vote 2"
-msgstr ""
-
-msgctxt "#33725"
-msgid "Vote 1"
-msgstr ""
-
 #: 
 msgctxt "#33650"
 msgid "Language"
@@ -269,4 +241,49 @@ msgstr "otkloniti neispravnost"
 msgctxt "#33691"
 msgid "Include sensitive login data in debug log [DON'T POST PUBLICLY]"
 msgstr "Uključite osjetljive podatke za prijavu u dnevnik za ispravljanje pogrešaka [NE POŠTEJTE JAVNO]"
+
+#: 
+msgctxt "#33719"
+msgid "Add to My List"
+msgstr "Dodaj u Moj popis"
+
+#: 
+msgctxt "#33720"
+msgid "Remove from My List"
+msgstr "Ukloni s Mog popisa"
+
+#: 
+msgctxt "#33721"
+msgid "Rate 5"
+msgstr "Ocijenite 5"
+
+#: 
+msgctxt "#33722"
+msgid "Rate 4"
+msgstr "Ocijenite 4"
+
+#: 
+msgctxt "#33723"
+msgid "Rate 3"
+msgstr "Ocijenite 3"
+
+#: 
+msgctxt "#33724"
+msgid "Rate 2"
+msgstr "Ocijenite 2"
+
+#: 
+msgctxt "#33725"
+msgid "Rate 1"
+msgstr "Ocijenite 1"
+
+#: 
+msgctxt "#33726"
+msgid "Rate"
+msgstr "Ocijenite"
+
+#: 
+msgctxt "#33727"
+msgid "Success"
+msgstr "Uspjeh"
 
