--- a/resources/language/resource.language.hu_hu/strings.po
+++ b/resources/language/resource.language.hu_hu/strings.po
@@ -182,34 +182,6 @@ msgctxt "#33718"
 msgid "Trending Now"
 msgstr "Trendelő most"
 
-msgctxt "#33719"
-msgid "Add to My List"
-msgstr ""
-
-msgctxt "#33720"
-msgid "Remove from My List"
-msgstr ""
-
-msgctxt "#33721"
-msgid "Vote 5"
-msgstr ""
-
-msgctxt "#33722"
-msgid "Vote 4"
-msgstr ""
-
-msgctxt "#33723"
-msgid "Vote 3"
-msgstr ""
-
-msgctxt "#33724"
-msgid "Vote 2"
-msgstr ""
-
-msgctxt "#33725"
-msgid "Vote 1"
-msgstr ""
-
 #: 
 msgctxt "#33650"
 msgid "Language"
@@ -269,4 +241,49 @@ msgstr "Debug"
 msgctxt "#33691"
 msgid "Include sensitive login data in debug log [DON'T POST PUBLICLY]"
 msgstr "Érzékeny belépési adatok beszúrása a hibakeresési naplóba"
+
+#: 
+msgctxt "#33719"
+msgid "Add to My List"
+msgstr "Hozzáadás a Saját listához"
+
+#: 
+msgctxt "#33720"
+msgid "Remove from My List"
+msgstr "Eltávolítás a listáról"
+
+#: 
+msgctxt "#33721"
+msgid "Rate 5"
+msgstr "Küldje 5"
+
+#: 
+msgctxt "#33722"
+msgid "Rate 4"
+msgstr "Küldje 4"
+
+#: 
+msgctxt "#33723"
+msgid "Rate 3"
+msgstr "Küldje 3"
+
+#: 
+msgctxt "#33724"
+msgid "Rate 2"
+msgstr "Küldje 2"
+
+#: 
+msgctxt "#33725"
+msgid "Rate 1"
+msgstr "Küldje 1"
+
+#: 
+msgctxt "#33726"
+msgid "Rate"
+msgstr "Küldje"
+
+#: 
+msgctxt "#33727"
+msgid "Success"
+msgstr "Siker"
 
