--- a/resources/language/resource.language.hr_hr/strings.po
+++ b/resources/language/resource.language.hr_hr/strings.po
@@ -287,3 +287,6 @@ msgctxt "#30727"
 msgid "Success"
 msgstr "Uspjeh"
 
+msgctxt "#30728"
+msgid "Login failed, do you want to input your credentials again?"
+msgstr "Prijava nije uspjela, želite li ponovno unijeti svoje vjerodajnice?"
