--- a/resources/language/resource.language.hu_hu/strings.po
+++ b/resources/language/resource.language.hu_hu/strings.po
@@ -287,3 +287,7 @@ msgctxt "#30727"
 msgid "Success"
 msgstr "Siker"
 
+msgctxt "#30728"
+msgid "Login failed, do you want to input your credentials again?"
+msgstr "A bejelentkezés sikertelen, meg szeretné adni a hitelesítő adatait?"
+
