--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -196,6 +196,14 @@ msgctxt "#30728"
 msgid "Login failed, do you want to input your credentials again?"
 msgstr ""
 
+msgctxt "#30729"
+msgid "KIDS"
+msgstr ""
+
+msgctxt "#30730"
+msgid "Weekly Top"
+msgstr ""
+
 msgctxt "#30650"
 msgid "Language"
 msgstr ""
