--- a/resources/language/resource.language.hu_hu/strings.po
+++ b/resources/language/resource.language.hu_hu/strings.po
@@ -5,7 +5,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: POEditor.com\n"
 "Project-Id-Version: hbogo kodi addon\n"
-"Language: hu\n"
+"Language: hu_hu\n"
 
 #: 
 msgctxt "#30000"
