--- a/resources/language/resource.language.hr_hr/strings.po
+++ b/resources/language/resource.language.hr_hr/strings.po
@@ -79,13 +79,25 @@ msgstr "Odaberite svog operatera"
 
 #: 
 msgctxt "#30660"
-msgid "Streaming"
-msgstr "Streaming"
+msgid "Input.Stream/CDM"
+msgstr "Input.Stream/CDM"
 
 #: 
 msgctxt "#30665"
 msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
 msgstr "Inputstream Adaptive Postavke (max bitrate,rezolucija,itd...)"
+
+msgctxt "#30666"
+msgid "InputStream Helper information"
+msgstr "InputStream Helper information"
+
+msgctxt "#30667"
+msgid "(Re)install Widevine CDM..."
+msgstr "(Re)install Widevine CDM..."
+
+msgctxt "#30668"
+msgid "Remove Widevine CDM..."
+msgstr "Remove Widevine CDM..."
 
 #: 
 msgctxt "#30700"
