--- a/resources/language/resource.language.hu_hu/strings.po
+++ b/resources/language/resource.language.hu_hu/strings.po
@@ -79,13 +79,25 @@ msgstr "Válassza ki a szolgáltatót"
 
 #: 
 msgctxt "#30660"
-msgid "Streaming"
-msgstr "Streamelés"
+msgid "Input.Stream/CDM"
+msgstr "Input.Stream/CDM"
 
 #: 
 msgctxt "#30665"
 msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
 msgstr "Inputstream Adaptive beállítások (max bitrate,resolution,ecc..)"
+
+msgctxt "#30666"
+msgid "InputStream Helper information"
+msgstr "InputStream Helper information"
+
+msgctxt "#30667"
+msgid "(Re)install Widevine CDM..."
+msgstr "(Re)install Widevine CDM..."
+
+msgctxt "#30668"
+msgid "Remove Widevine CDM..."
+msgstr "Remove Widevine CDM..."
 
 #: 
 msgctxt "#30700"
