--- a/resources/language/resource.language.cz_cz/strings.po
+++ b/resources/language/resource.language.cz_cz/strings.po
@@ -74,12 +74,24 @@ msgid "Chose your operator"
 msgstr "Vyberte operátora"
 
 msgctxt "#30660"
-msgid "Streaming"
-msgstr "Streamuji"
+msgid "Input.Stream/CDM"
+msgstr "Input.Stream/CDM"
 
 msgctxt "#30665"
 msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
 msgstr "Nastavení adaptivního vstupního proudu (max. dat. tok, rozlišení, atd...)"
+
+msgctxt "#30666"
+msgid "InputStream Helper information"
+msgstr "InputStream Helper information"
+
+msgctxt "#30667"
+msgid "(Re)install Widevine CDM..."
+msgstr "(Re)install Widevine CDM..."
+
+msgctxt "#30668"
+msgid "Remove Widevine CDM..."
+msgstr "Remove Widevine CDM..."
 
 msgctxt "#30700"
 msgid "Find movies and TV Shows..."
