--- a/resources/language/resource.language.pl_pl/strings.po
+++ b/resources/language/resource.language.pl_pl/strings.po
@@ -91,14 +91,26 @@ msgid "Chose your operator"
 msgstr "Wybierz swojego operatora"
 
 msgctxt "#30660"
-msgid "Streaming"
-msgstr "Streaming"
+msgid "Input.Stream/CDM"
+msgstr "Input.Stream/CDM"
 
 msgctxt "#30665"
 msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
 msgstr ""
 "Wejściowe ustawienia adaptacyjne (maksymalna szybkość transmisji, "
 "rozdzielczość, ECC ..)"
+
+msgctxt "#30666"
+msgid "InputStream Helper information"
+msgstr "InputStream Helper information"
+
+msgctxt "#30667"
+msgid "(Re)install Widevine CDM..."
+msgstr "(Re)install Widevine CDM..."
+
+msgctxt "#30668"
+msgid "Remove Widevine CDM..."
+msgstr "Remove Widevine CDM..."
 
 msgctxt "#30700"
 msgid "Find movies and TV Shows..."
